syntax = "proto3";

option go_package = "gRPCDemo/pb";

package routeguide;

service RouteGuide {
  rpc GetFeature(Point) returns (Feature) {}
  rpc ListFeatures(Rectangle) returns (stream Feature) {}
  rpc RecordRoute(stream Point) returns (RouteSummary) {}
  rpc RouteChat(stream RouteNode) returns (stream RouteNode) {}
}

message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message Rectangle {
  Point lo = 1;
  Point hi = 2;
}

message Feature {
  string name = 1;
  Point location = 2;
}

message RouteNode {
  Point location = 1;
  string message = 2;
}

message RouteSummary {
  int32 point_count = 1;

  int32 feature_count = 2;

  int32 distance = 3;

  int32 elapsed_time = 4;
}

message StreamRequest {
  string question = 1;
}

message StreamResponse {
  string answer = 1;
}

service Echo {
  // 注意返回也要设置成 stream
  // 要不然 response 就只有 sendAndClose 方法了
  rpc Conversations(stream StreamRequest) returns (stream StreamResponse) {}
}